# Internal-Consistency-Engine

./: README.md  app.py  main.py  requirements.txt  setup.cfg
api/: configuration_environment.py
bootstraps/: fastapi_bootstrap.py  mongo_bootstrap.py
helper/: config_helper.py  database_helper.py  keyring_helper.py
internal_consistency_engine/: database_engine.py  internal_consistency_engine.py
