# Setup the environment so that it meets minimum specifications for the application to run
[metadata]
name = 'internal_consistency_engine'
version = '0.0.1'

[options]
packages = 'internal_consistency_engine'
install_requires =
    fastapi                      # API Library
    uvicorn                      # Web Server
    pydantic                     # Data Modeling and validation
    email-validator              # Data Modeling and validation
    motor                        # Async MongoDB Connection
    python-jose[cryptography]    # Object Signing and Encryption
    passlib                      # Password Hashing
    python-multipart             # Incoming request parser
    bcrypt                       # Encryption library
    keyring                      # Secure data store